# mem0-api

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  README_DOCKER.md  agno_service.py  check_mem0_server.py  docker-compose.yml  local_test_mem0_api.py  mem0_api.py  memory_utils.py  models.py  pyproject.toml  requirements.txt  start.sh  test_api.py  transcript_handler.py  webapp_server.py
.gemini/: settings.json
chroma_db/: chroma.sqlite3
docs/: CODING_GUIDELINES.md
mem0-webapp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
mem0-webapp/src/: App.tsx  index.css
