[project]
name = "mem0-api"
version = "0.1.0"
description = "A clean, production-ready FastAPI service for semantic memory management using Mem0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "mem0ai==1.0.0",
    "openai>=1.33.0",
    "chromadb",
    "redis",
    "redisvl",
    "google-genai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pydantic",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
